--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 streamlit>=1.24.0
 pandas>=1.5.0
-openpyxl>=3.0.0 
+openpyxl>=3.0.0
+selenium>=4.15.0
+webdriver-manager>=4.0.0
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+geckodriver-autoinstaller>=0.1.0 
