Additional bug fixes related to db connection

--- a/PathwaysUpdate/requirements.txt
+++ b/PathwaysUpdate/requirements.txt
@@ -22,5 +22,8 @@ xlrd>=2.0.0
 python-dotenv>=1.0.0
 requests>=2.31.0
 
+# Environment variable loading
+python-dotenv>=1.0.0
+
 # Optional: For better performance
 pyarrow>=14.0.0 
