--- a/PathwaysUpdate/requirements.txt
+++ b/PathwaysUpdate/requirements.txt
@@ -6,6 +6,7 @@ numpy>=1.24.0
 # Database dependencies
 pymysql>=1.1.0
 cryptography>=41.0.0
+sqlalchemy>=2.0.0
 
 # Web scraping and automation
 selenium>=4.15.0
