--- a/PathwaysUpdate/.gitignore
+++ b/PathwaysUpdate/.gitignore
@@ -1,13 +1,61 @@
 # Environment variables
 .env
+.env.local
+.env.production
 
 # Python
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Google service account
+# Google service account and credentials
 service_account_key.json
 credentials.json
 token.pickle
+*.json.key
+*_key.json
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Cache files
+.cache/
+*.cache
+
+# Temporary files
+*.tmp
+*.temp
