--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,12 @@ Pillow>=10.0.0
 openpyxl>=3.1.0
 xlrd>=2.0.0
 
+# Google Drive API dependencies
+google-auth-oauthlib==1.2.2
+google-auth-httplib2==0.2.0
+google-api-python-client==2.176.0
+google-auth==2.40.3
+
 # Utilities
 python-dotenv>=1.0.0
 requests>=2.31.0
