Fix Supabase integration and prepare for Streamlit Cloud deployment

--- a/FosterDash/.gitignore
+++ b/FosterDash/.gitignore
@@ -1,42 +1,24 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual Environment
+# Virtual environment
 foster_env/
 venv/
 env/
 
-# Streamlit
+# Streamlit secrets (local only)
 .streamlit/secrets.toml
 
-# Data files (don't commit to git)
+# Data files (too large for repo)
 ../__Load Files Go Here__/
 
-# IDE
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# IDE files
 .vscode/
 .idea/
-*.swp
-*.swo
 
-# OS
+# OS files
 .DS_Store
 Thumbs.db
